Fixing pointer not showing

--- a/native/more-options-2/js/more-options/more-options.css
+++ b/native/more-options-2/js/more-options/more-options.css
@@ -67,6 +67,7 @@
     padding: 8px;
     border-radius: 12px;
     background-color: #eeeeee;
+    cursor: pointer;
     transition: background-color .5s ease-in-out;
 }
 
